--- a/EnozomFinal.API/appsettings.json
+++ b/EnozomFinal.API/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "server=localhost;port=3308;database=EnozomFinal;User=root;Password=mo123"
+  "ConnectionString": "server=localhost;port=3308;database=EnozomFinal_yasser;User=root;Password=mo123"
 }
